# Advent2025

./: .gitignore  LICENSE  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  pyproject.toml  template.py  utils.py
