[project]
name = "advent2025"
version = "0.1.0"
description = "Advent of Code 2025"
authors = [{ name = "Ryan Echols" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "ALL",
    # rules to include even if a parent is listed as ignored:
    "W605", "D419", "G010", "G101", "G2", "RET502", "RET503",
]
extend-ignore = [
    # explicit conflicts with auto-formatter:
    "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "E501",
    # whitespace and formatting taken care of by pre-commit:
    "W",
    # comments are always fine:
    "TD", "FIX", "ERA",
    # don't care:
    "C90", "D", "DOC", "ANN002", "ANN003", "ANN401", "S104", "S113", "S311", "FBT",
    "B904", "B905", "CPY", "C408", "EM", "G", "RSE", "RET", "TC", "PTH123", "PLR0133",
    "PLR09", "PLR1711", "PLR2004", "TRY003", "TRY301",
    "T201", "PLW2901",
    # actually makes code harder to read:
    "UP015", "PT003", "SIM105", "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"template.py" = [
    "B007",  # unused variable
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
suppress-dummy-args = true
